--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.17",
     "humanize-duration": "^3.32.1",
     "quill": "^2.0.3",
     "rc-progress": "^4.0.0",
@@ -17,6 +18,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
     "react-youtube": "^10.1.0",
+    "tailwindcss": "^4.0.17",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
