--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.25.5",
     "@tailwindcss/vite": "^4.0.17",
+    "animate.css": "^4.1.1",
     "humanize-duration": "^3.32.1",
     "quill": "^2.0.3",
     "rc-progress": "^4.0.0",
