--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^8.14.3",
     "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.10",
-    "stripe": "^18.1.0"
+    "stripe": "^18.1.0",
+    "svix": "^1.65.0"
   }
 }
